--- a/conf/application.conf
+++ b/conf/application.conf
@@ -40,7 +40,7 @@ akka {
 # ~~~~~
 # The secret key is used to sign Play's session cookie.
 # This must be changed for production, but we don't recommend you change it in this file.
-play.crypto.secret = "changeme"
+play.crypto.secret = "eegorplayscala"
 
 ## Modules
 # https://www.playframework.com/documentation/latest/Modules
@@ -179,10 +179,10 @@ play.server.netty {
 #
 play.ws {
   # Sets HTTP requests not to follow 302 requests
-  #followRedirects = false
+  followRedirects = true
 
   # Sets the maximum number of open HTTP connections for the client.
-  #ahc.maxConnectionsTotal = 50
+  ahc.maxConnectionsTotal = 50
 
   ## WS SSL
   # https://www.playframework.com/documentation/latest/WsSSL
