bassey > mongo, ironmq, mysql

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -346,8 +346,26 @@ db {
   #default.url = "jdbc:h2:mem:play"
   #default.username = sa
   #default.password = ""
+  db.default.driver=com.mysql.jdbc.Driver
+  db.default.url="jdbc:mysql://o3iyl77734b9n3tg.cbetxkdyhwsb.us-east-1.rds.amazonaws.com/eegor"
+  db.default.username=vpjcwu6w3xzs8jfl
+  db.default.password="xk1ht992ey71rcbu"
+
 
   # You can turn on SQL logging for any datasource
   # https://www.playframework.com/documentation/latest/Highlights25#Logging-SQL-statements
   #default.logSql=true
+}
+mongo {
+
+  # The mongo module
+  module.mongo=${play.path}/modules/mongo
+
+  # mongodb connection details
+  mongo.host=ds149700.mlab.com
+  mongo.port=49700
+  mongo.database=heroku_9tzdg6ch
+
+  mongo.username=eegor_user
+  mongo.password=exigent1
 }
