--- a/conf/application.conf
+++ b/conf/application.conf
@@ -355,7 +355,7 @@ db {
   # You can turn on SQL logging for any datasource
   # https://www.playframework.com/documentation/latest/Highlights25#Logging-SQL-statements
   #default.logSql=true
-  module.mongo=${play.path}/modules/mongo
+  #module.mongo=${play.path}/modules/mongo
 
   # mongodb connection details
   mongo.host=ds149700.mlab.com
@@ -365,4 +365,24 @@ db {
   mongo.username=eegor_user
   mongo.password=exigent1
 }
+# ****************************************** #
+# *** ReactiveMongo Plugin configuration *** #
+# ****************************************** #
+play.modules.enabled += "play.modules.reactivemongo.ReactiveMongoModule"
+
+# Simple configuration (by URI)
+mongodb.uri = "mongodb://ds149700.mlab.com:49700/heroku_9tzdg6ch"
+mongodb.uri = ${?MONGO_URI}
+
+# URI + Authentication
+# mongodb.uri = "mongodb://jack:jack@localhost:27017/toto"
+
+# Legacy configuration (prefer URI)
+# mongodb.servers = ["localhost:27017"]
+# mongodb.db = "databasename"
+
+# If you want to turn on logging for ReactiveMongo, uncomment and customize this line
+# logger.reactivemongo=DEBUG
+logger.reactivemongo=INFO
+
 
