--- a/conf/application.conf
+++ b/conf/application.conf
@@ -358,12 +358,7 @@ db {
   #module.mongo=${play.path}/modules/mongo
 
   # mongodb connection details
-  mongo.host=ds149700.mlab.com
-  mongo.port=49700
-  mongo.database=heroku_9tzdg6ch
 
-  mongo.username=eegor_user
-  mongo.password=exigent1
 }
 # ****************************************** #
 # *** ReactiveMongo Plugin configuration *** #
@@ -371,11 +366,12 @@ db {
 play.modules.enabled += "play.modules.reactivemongo.ReactiveMongoModule"
 
 # Simple configuration (by URI)
-mongodb.uri = "mongodb://ds149700.mlab.com:49700/heroku_9tzdg6ch"
+#mongodb.uri = "mongodb://ds149700.mlab.com:49700/heroku_9tzdg6ch"
+mongodb.uri = "mongodb://eegor_user:exigent1@ds149700.mlab.com:49700/heroku_9tzdg6ch"
 mongodb.uri = ${?MONGO_URI}
 
 # URI + Authentication
-# mongodb.uri = "mongodb://jack:jack@localhost:27017/toto"
+# mongodb.uri = "mongodb://eegor_user:exigent1@ds149700.mlab.com:49700/heroku_9tzdg6ch"
 
 # Legacy configuration (prefer URI)
 # mongodb.servers = ["localhost:27017"]
