--- a/conf/application.conf
+++ b/conf/application.conf
@@ -347,8 +347,8 @@ db {
   #default.username = sa
   #default.password = ""
   db.default.driver=com.mysql.jdbc.Driver
-  db.default.url="jdbc:mysql://o3iyl77734b9n3tg.cbetxkdyhwsb.us-east-1.rds.amazonaws.com/eegor"
-  db.default.username=vpjcwu6w3xzs8jfl
+  db.default.url="mysql://vpjcwu6w3xzs8jfl:xk1ht992ey71rcbu@o3iyl77734b9n3tg.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/qfujwn7angi8bh6u"
+  db.default.username="vpjcwu6w3xzs8jfl"
   db.default.password="xk1ht992ey71rcbu"
 
 
@@ -367,6 +367,7 @@ play.modules.enabled += "play.modules.reactivemongo.ReactiveMongoModule"
 
 # Simple configuration (by URI)
 #mongodb.uri = "mongodb://ds149700.mlab.com:49700/heroku_9tzdg6ch"
+#mongodb://<dbuser>:<dbpassword>@ds149700.mlab.com:49700/heroku_9tzdg6ch
 mongodb.uri = "mongodb://eegor_user:exigent1@ds149700.mlab.com:49700/heroku_9tzdg6ch"
 mongodb.uri = ${?MONGO_URI}
 
