--- a/conf/application.conf
+++ b/conf/application.conf
@@ -346,10 +346,11 @@ db {
   #default.url = "jdbc:h2:mem:play"
   #default.username = sa
   #default.password = ""
-  db.default.driver=com.mysql.jdbc.Driver
-  db.default.url="mysql://vpjcwu6w3xzs8jfl:xk1ht992ey71rcbu@o3iyl77734b9n3tg.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/qfujwn7angi8bh6u"
-  db.default.username="vpjcwu6w3xzs8jfl"
-  db.default.password="xk1ht992ey71rcbu"
+
+  #db.default.driver=com.mysql.jdbc.Driver
+  #db.default.url="mysql://vpjcwu6w3xzs8jfl:xk1ht992ey71rcbu@o3iyl77734b9n3tg.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/qfujwn7angi8bh6u"
+  #db.default.username="vpjcwu6w3xzs8jfl"
+  #ßdb.default.password="xk1ht992ey71rcbu"
 
 
   # You can turn on SQL logging for any datasource
